.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arcuststmt5__c.object
<CustomObject>
    <description>arcuststmt5__c</description>
    <fields>
        <fullName>rstkf__arcuststmt5_amtapplcust__c</fullName>
        <label>Amount Applied (Customer Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_arapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Application Transaction</label>
        <referenceTo>rstkf__arapplic__c</referenceTo>
        <relationshipLabel>AR Statements Customer Finance Chgs</relationshipLabel>
        <relationshipName>arcuststmt5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_arcuststmt4__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AR Statements Customer Sub-Header</label>
        <referenceTo>rstkf__arcuststmt4__c</referenceTo>
        <relationshipLabel>AR Statements Customer Finance Chgs</relationshipLabel>
        <relationshipName>arcuststmt5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_balancedue__c</fullName>
        <label>Balance Due During Time Span</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_daysinspan__c</fullName>
        <label>Length in Days of Calculation Time Spam</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_dayslateatend__c</fullName>
        <label>Days Late at End of Time Span</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_eff_trantype__c</fullName>
        <label>Effective Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_finchgforspan__c</fullName>
        <label>Finance Charge for Time Span</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_printable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Sub-Line on Statement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_seqno__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_spanend__c</fullName>
        <label>End of Calculation Time Span</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_spanstart__c</fullName>
        <label>Start of Calculation Time Span</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt5_textline__c</fullName>
        <label>Formatted Statement Sub-Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcuststmt5_arcuststmt4__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstkf__arcuststmt5_seqno__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__arcuststmt5_arcuststmt4__r.Name &amp; &apos;-&apos; &amp;  TEXT(rstkf__arcuststmt5_seqno__c)), 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Statements Customer Finance Chg</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Statements_Customer_Finance_Chgs</fullName>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__arcuststmt5_seqno__c</columns>
        <columns>rstkf__arcuststmt5_amtapplcust__c</columns>
        <columns>rstkf__arcuststmt5_eff_trantype__c</columns>
        <columns>rstkf__arcuststmt5_balancedue__c</columns>
        <columns>rstkf__arcuststmt5_daysinspan__c</columns>
        <columns>rstkf__arcuststmt5_dayslateatend__c</columns>
        <columns>rstkf__arcuststmt5_spanstart__c</columns>
        <columns>rstkf__arcuststmt5_spanend__c</columns>
        <columns>rstkf__arcuststmt5_finchgforspan__c</columns>
        <columns>rstkf__arcuststmt5_printable__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Statements Customer Finance Chgs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Statements Customer Finance Chgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>